[gd_scene load_steps=2 format=3 uid="uid://b7plflu7xr7dp"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_ldh43"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ldh43")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BT_Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="BT_Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="BT_Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Quit to main menu?"
initial_position = 1
size = Vector2i(200, 80)
exclusive = false
unresizable = true
always_on_top = true
popup_window = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/BT_Resume" to="." method="handle_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BT_Options" to="." method="handle_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BT_Quit" to="." method="handle_quit_pressed"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="handle_cancel_pressed"]
[connection signal="close_requested" from="ConfirmationDialog" to="." method="handle_cancel_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="handle_quit_confirmed"]
